# Mythoscape

./: .clang-format  .editorconfig  CMakeLists.txt  CMakePresets.json  vcpkg.json
cmake/: FindMeojson.cmake
src/: context.cpp  context.h  main.cpp
